examples/test/testpolicy17749.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17749
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key0: value4
      key16: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value0
          key17: value40
          key18: value10
      podSelector:
        matchLabels:
          key13: value14
